# PriceCalculate

./: CMakeLists.txt  LICENSE  README.md
resource/: resource.h
src/: WindowHelp.cpp  WindowHelp.h  WindowHelp.ui  WindowSet.cpp  WindowSet.h  WindowSet.ui  WinowMain.cpp  WinowMain.h  WinowMain.ui  main.cpp
